--- a/vue/src/assets/css/pages/home.scss
+++ b/vue/src/assets/css/pages/home.scss
@@ -1,11 +1,11 @@
-@import '../_variables.scss';
+@import "../_variables.scss";
 
 main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../../img/icon/login/login_bg.jpg');
+    background-image: url("../../img/icon/login/login_bg.jpg");
     background-repeat: no-repeat;
     background-position: 50% 75%;
 
@@ -56,11 +56,12 @@ main {
                     }
 
                     h1 {
-                        font-family: 'Roboto Condensed', sans-serif;
+                        font-family: "Roboto Condensed", sans-serif;
                         text-transform: uppercase;
                         font-size: 25pt;
                         font-weight: 300;
                         user-select: none;
+                        white-space: nowrap;
                     }
 
                     div.input-wrapper {
@@ -87,8 +88,8 @@ main {
                             }
                         }
 
-                        input[type='text'],
-                        input[type='password'] {
+                        input[type="text"],
+                        input[type="password"] {
                             border: none;
                             background-color: transparent;
                             font-size: 15pt;
@@ -189,7 +190,7 @@ main {
                         color: black;
                     }
 
-                    &:hover>span {
+                    &:hover > span {
                         text-decoration: underline;
                     }
                 }
